use List.of() for empty list return value